# mandelbrot-renderer

./: CMakeLists.txt  README.md  main.cpp
src/: App.cpp  App.h  Config.h  SwapchainUtils.cpp  SwapchainUtils.h  main.cpp
src/shaders/: shader.slang
